# jj-ai

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: command.rs  config.rs  detection.rs  diff.rs  editor.rs  error.rs  hook.rs  lib.rs  llm.rs  main.rs  update.rs
src/command/: backprop.rs  describe.rs  setup.rs
src/tests/: config_tests.rs  llm_tests.rs  mod.rs
