[package]
name = "jj-ai"
version = "0.1.0"
edition = "2021"
description = "AI-powered tools for jj version control"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
jj-lib = "0.37.0"
etcetera = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
orpheus = "0.1"
anyhow = "1.0"
itertools = "0.13"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
bstr = "1.0"
tokio-util = { version = "0.7", features = ["compat"] }
walkdir = "2.5.0"
glob = "0.3"
tempfile = "3"
owo-colors = "4"
